# com.infected.insta-Flutter

./: .flutter-plugins-dependencies  .gitignore  .kilocodemodes  ENVIRONMENT_CONFIG.md  README.md  analysis_options.yaml  blueprint.md  fix_supabase_trigger.sql  flutter-skills-demo.md  flutter-ui-skills.md  pubspec.yaml
.dart_tool/: package_config.json  package_graph.json
.dart_tool/dartpad/: web_plugin_registrant.dart
.kilocode/: mcp.json
android/: build.gradle.kts
android/app/: build.gradle.kts  google-services.json  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  SETUP.md  SUPABASE.md
lib/: firebase_options.dart  main.dart  router.dart
lib/core/config/: app_config.dart
lib/core/theme/: instagram_theme.dart  theme.dart
lib/core/widgets/: glass_widgets.dart  rich_caption.dart  shimmer.dart
lib/data/fixtures/: default_profile_data.dart  filters_data.dart  mock_requests_data.dart  reactions_data.dart
lib/data/models/: result.dart
lib/data/realtime/: presence_service.dart  realtime_feed_service.dart  realtime_messages_service.dart  realtime_notifications_service.dart
lib/data/repositories/: base_repository.dart  message_repository.dart  notification_repository.dart  post_repository.dart  user_repository.dart
lib/features/activity/screens/: notification_screens.dart
lib/features/auth/data/: auth_repository.dart
lib/features/auth/models/: user.dart
lib/features/auth/presentation/: auth_gate.dart  auth_screen.dart  email_verification_screen.dart  forgot_password_screen.dart  login_form.dart  login_page.dart  login_screen.dart  onboarding_screen.dart  providers.dart  signup_form.dart  signup_page.dart  signup_screen.dart
lib/features/auth/providers/: auth_provider.dart
lib/features/auth/repositories/: user_repository.dart
lib/features/auth/screens/: login_screen.dart  signup_screen.dart
lib/features/authentication/screens/: login_screen.dart  splash_screen.dart
lib/features/call/models/: call_model.dart
lib/features/call/providers/: call_provider.dart
lib/features/call/screens/: call_screen.dart  video_call_screen.dart
lib/features/call/services/: firebase_signaling_service.dart  signaling_service.dart  supabase_signaling_service.dart
lib/features/call/widgets/: call_button.dart  call_card.dart
lib/features/chat/screens/: chat_screen.dart  messages_screens.dart
lib/features/create_post/providers/: create_post_provider.dart  storage_provider.dart
lib/features/create_post/repositories/: create_post_repository.dart
lib/features/create_post/screens/: create_post_screen.dart  (+1 more)
lib/features/home/: home_page.dart
lib/features/posts/: create_post_page.dart
lib/features/profile/: profile_page.dart
lib/features/reels/: reels_page.dart
lib/supabase/: supabase_client.dart
linux/: CMakeLists.txt
test/: widget_test.dart
web/: index.html  manifest.json
(+40 files in other folders)
